# TuneForge

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml  init-wiki.yml
docs/: ARCHITECTURE.md  DECISIONS.md
evals/: RESULTS.md  __init__.py  gate.py  harness.py  metrics.py
examples/: run_optimizer.py
tests/: conftest.py  test_cli_runner.py  test_config_spaces.py  test_dissociation.py  test_gate.py  test_metrics_problem.py  test_optimizers.py  test_optuna_check.py  test_surfaces.py
tuneforge/: __init__.py  cli.py  config.py  metrics.py  optuna_check.py  problem.py  runner.py  spaces.py  types.py
tuneforge/optimizers/: __init__.py  gp_ei.py  hyperband.py  random_search.py  successive_halving.py  tpe.py
tuneforge/surfaces/: __init__.py  ackley.py  base.py  branin.py  null_surface.py
